# smartpassgen

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
smartpassgen/: __init__.py  generator.py
src/: generator.py  words_list.txt
tests/: test_generator.py
