[project]
name = "smartpassgen"
version = "0.0.1"
authors = [
  { name="Ali Mohamed", email="aliali1354321@gmail.com" },
]
description = "A Python library for generating different types of passwords using a simple class interface."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
